--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "sass": "^1.26.10",
-    "yup": "^0.29.1",
-    "redux": "^4.0.5"
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
